aws/NetworkAcls-ap-southeast-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "SubnetId": "subnet-4961173e", 
     "NetworkAclId": "acl-4d1d7a28", 
     "NetworkAclAssociationId": "aclassoc-05882f61"
    }, 
    {
     "SubnetId": "subnet-1cf48e79", 
     "NetworkAclId": "acl-4d1d7a28", 
     "NetworkAclAssociationId": "aclassoc-04882f60"
    }
   ], 
   "NetworkAclId": "acl-4d1d7a28", 
   "VpcId": "vpc-b50c85d0", 
   "Tags": [], 
   "Entries": [
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }, 
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }
   ], 
   "IsDefault": true
  }
 ]
}
